# talus

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.py  test.py
examples/: active-learning.ipynb
proptest-regressions/: simplex.txt
src/: binomial.rs  graph.rs  heap.rs  homology.rs  lib.rs  main.rs  morse.rs  python.rs  rips.rs  simplex.rs
talus/: Cargo.toml  morse.py
talus/proptest-regressions/: binomial.txt  rips.txt
talus/src/: graph.rs  homology.rs  lib.rs  morse.rs  rips.rs  simplex.rs
talus_python/: CHANGELOG.md  Cargo.toml  README.md  morse.py  pyproject.toml
talus_python/src/: lib.rs  python.rs
tests/: persistence_test.rs
tests/resources/: grays.txt
