[package]
name = "topology"
version = "0.1.0"
authors = ["Scott Hellman <scott@scutellaris.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
petgraph = "0.5.0"
itertools = "0.8.2"
csv = "1.1"
partitions = "0.2.4"
