[package]
name = "talus"
version = "0.1.0"
authors = ["Scott Hellman <scotthellman2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
petgraph = "0.5.0"
itertools = "0.8.2"
csv = "1.1"
kdtree = "0.5.1"
rand = "0.7.3"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies.cpython]
version = "0.4"
features = ["extension-module"]

[profile.release]
debug = true
