[package]
name = "talus"
version = "0.2.3"
authors = ["Scott Hellman <scotthellman2@gmail.com>"]
edition = "2018"
description = "Computational topology in Rust"
repository = "https://github.com/scotthellman/talus"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.8.3"
itertools = "0.14.0"
csv = "1.1"
kdtree = "0.8.0"
rand = "0.10.1"
thiserror = "2.0"

[dev-dependencies]
proptest = "1.11.0"

[lib]
crate-type = ["cdylib", "lib"]
