[package]
name = "talus_python"
version = "0.2.3"
authors = ["Scott Hellman <scotthellman2@gmail.com>"]
edition = "2018"
description = "Computational topology in Rust"
repository = "https://github.com/scotthellman/talus"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
petgraph = "0.5.0"
talus = { path = "../talus" }

[dev-dependencies]
proptest = "0.10.1"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies.pyo3]
version = "0.14.4"
features = ["extension-module"]

[package.metadata.maturin]
requires-dist = ["networkx>=2.0"]
