[package]
name = "talus_python"
version = "0.3.0"
authors = ["Scott Hellman <scotthellman2@gmail.com>"]
edition = "2024"
description = "Computational topology in Rust"
repository = "https://github.com/scotthellman/talus"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
petgraph = "0.8.3"
talus = { path = "../talus" }

[dev-dependencies]
proptest = "1.11.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies.pyo3]
version = "0.28.3"
features = ["extension-module"]

