[project]
name = "talus_python"
version = "0.2.3"
authors = [{name = "Scott Hellman", email = "scotthellman2@gmail.com"}]
edition = "2018"
description = "Computational topology in Rust"
repository = "https://github.com/scotthellman/talus"
license = "MIT"

dependencies = ["networkx>=2.0"]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]