[project]
name = "talus_python"
version = "0.3.0"
authors = [{name = "Scott Hellman", email = "scotthellman2@gmail.com"}]
license = "MIT"
repository = "https://github.com/scotthellman/talus"
description = "Rust-powered computational topology"
readme = "README.md"

dependencies = ["networkx>=2.0"]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]